--- a/app/src/main/res/layout/activity_eventmonitor.xml
+++ b/app/src/main/res/layout/activity_eventmonitor.xml
@@ -269,6 +269,30 @@
                     android:layout_marginTop="15dp"
                     android:background="@color/GT_Color_Navy" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Will it happen rain or shine?"
+                    android:textColor="@color/GT_Color"
+                    android:textSize="13sp" />
+                <TextView
+                    android:id="@+id/rainorshine"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="No"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/GT_Color_Navy" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
